test/sema/traits/impl_method_invalid_generic_trait.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait A {
  fn foo();
}

struct S {
  // CHECK: [[# @LINE + 1]]:8: error: type argument count mismatch, expected 0, but received 1
  impl A<number> {
    fn foo() {}
  }
}

fn main() {}
